# NewsFlash

./: MVP Plan - NewsFlash.txt  docker-compose.yml  start.sh
backend/: .env.example  package-lock.json  package.json
backend/src/: config.ts  index.ts
backend/src/accounts/: whitelist.ts
backend/src/api/: auth.ts  routes.ts  stories.ts
backend/src/db/: connection.ts  queries.ts  schema.ts  seed.ts
backend/src/jobs/: cluster.ts  filter.ts  ingest.ts  pipeline.ts  scheduler.ts  score.ts  summarize.ts
backend/src/utils/: llm-client.ts  twitter-client.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  stories.rs  window.rs
desktop/ui/bar/: index.html
desktop/ui/settings/: index.html
extension/: manifest.json  service-worker.js
extension/content/: content-script.js  newsflash-bar.css
extension/popup/: popup.html  popup.js
plans/: PROJECT_STATUS_AND_PLAN.txt
