[package]
name = "newsflash"
version = "0.1.0"
edition = "2021"
description = "High-signal tech news, delivered passively"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "newsflash_lib"
crate-type = ["lib", "cdylib", "staticlib"]
